compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/FieldWithoutName3.java
public final class MyClass /* MyClass*/<T>  {
  private final T value;

  public  MyClass(T);//  .ctor(T)

  public final T getValAsString();//  getValAsString()

  public final T getValue();//  getValue()
}
